refactor(rdm-ui): 重构列表搜索功能
- 移除各控制器中的重复搜索方法
- 优化 BaseKeyPageController 中的搜索逻辑
- 添加 initButtonIcon 方法统一按钮图标初始化
- 使用 toList() 替代 Collectors.toList() 收集流结果- 删除未使用的导入和增加必要的注释